# DeformationLib

./: CMakeLists.txt  README.md
Meshes Cages and Coordinates/: armadillo.ply  armadillo.stl  armadillo_cage.ply  armadillocage.stl  cat.ply  cat.stl  cat_cage.stl  hand.ply  hand.stl  hand_cage.ply  hand_cage.stl  horse.ply  horse.stl  horse_cage.stl
build-release/: cube.ply  prism.ply  prism_cube.coord
include/: barycentriccoordinates.h  meanvaluecoordinates.h
src/: main.cpp  meanvaluecoordinates.cpp
